--- a/renovate-presets/devtool.json5
+++ b/renovate-presets/devtool.json5
@@ -42,6 +42,16 @@
       "enabled": true
     },
     {
+      "description": "Enable updates for Dex docker image",
+      "matchDatasources": [
+        "docker"
+      ],
+      "matchPackageNames": [
+        "ghcr.io/dexidp/dex"
+      ],
+      "enabled": true
+    },
+    {
       "description": "Group golang-version packages",
       "groupName": "group golang",
       "matchDatasources": [
