--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,7 @@
     "github>argoproj/argo-cd//renovate-presets/custom-managers/yaml.json5",
     "github>argoproj/argo-cd//renovate-presets/fix/disable-all-updates.json5",
     "github>argoproj/argo-cd//renovate-presets/devtool.json5",
-    "github>argoproj/argo-cd//renovate-presets/docs.json5"
+    "github>argoproj/argo-cd//renovate-presets/docs.json5",
+    "github>argoproj/argo-cd//renovate-presets/manifests.json5"
   ]
 }
